--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,3 +26,15 @@ a {
   text-decoration: underline;
   color: blue;
 }
+
+/* @media screen and (max-width: 800px) {
+  .external_link {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .external_link {
+    font-size: .5rem;
+  } 
+} */
